# threshold_monitor

./: .gitignore  LICENSE  README.md  deploy.sh  environment.yml  install.sh  pyproject.toml  run.sh  run_tests.sh  run_watch.sh  stop.sh  threshold_monitor.service  watch_threshold_monitor.service
src/threshold_monitor/: calib2obspy.py  data_ingestion.1  data_ingestion.py  datascope2obspy.py  orb2obspy.py  pipeline_database.sql  pipeline_stations.xml  slink2obspy.py  threshold_monitor.1  threshold_monitor.py  threshold_monitor.yml  threshold_monitor_hal.yml  threshold_monitor_strain.yml  watch_threshold_monitor.1  watch_threshold_monitor.py  wf2obspy.py
tests/: TM_alarms.csv  create_pipeline_StationXML.py  pipeline_stations_antelope.xml  test_threshold_monitor.py  threshold_monitor_10627.yml
